--- a/index.html
+++ b/index.html
@@ -45,15 +45,12 @@
 </head>
 
 <body id="home">
-
-	<!-- Preloader -->
-	<div id="preloader">
-		<div id="status"></div>
-	</div>
 	
-	<my-app>Loading...</my-app>
-	
-
+	<my-app>
+		<div id="preloader">
+			<div id="status"></div>
+		</div>
+	</my-app>
 
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
