--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	
 	<!-- Magnific Popup core CSS file -->
 	<link rel="stylesheet" href="css/magnific-popup.css"> 
-	<script src="http://localhost:4000/socket.io/socket.io.js"></script>
+	<script src="http://186.22.78.117:4000/socket.io/socket.io.js"></script>
 	<script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
@@ -44,7 +44,7 @@
 
 </head>
 
-<body id="home">
+<body id="home" style="background:#34495e">
 	<my-app>
 		<div id="preloader">
 			<div id="status"></div>
